# blehid_pass_manager

./: .gitignore  ESP32-C3-T-OI.3dm.rhl  LICENSE  ProPrj_PASSMAN BLE Fingerprint V1_2025-09-09.epro  README.md  blehid_pass_manager.ino  hid_it.h  keycodes.h  zip_installer.bat
Arduino/KW111_test/: KW111_test.ino
Arduino/R503_Test/: R503_Test.ino
Arduino/ZW0906__demo_code_arduino/: ZW0906__demo_code_arduino.ino
Arduino/blehid_pass_manager/: hid_it.h
BLEPassMan/: App.qml  BLEPassMan.pro  BLEPassMan.pro.user.736db35  BLEPassMan.pro.user.769cdc7  BLEPassMan.pro.user.8989123  BluetoothAlarmDialog.qml  ButtonsFingerprint.qml  Connect.qml  CustomButton.qml  GamePage.qml  Main.qml  Measure.qml  Page.qml  Settings.qml  SplashScreen.qml  TitleBar.qml  UserList.qml  connectionhandler.cpp  devicefinder.cpp  devicefinder.h  devicehandler.cpp  devicehandler.h  deviceinfo.cpp  inno_setup_installer.iss  inno_setup_installer_asus.iss  main.cpp  placeholderencoder.cpp  placeholderencoder.h  placeholderparser.cpp  placeholderparser.h  qmldir
BLEPassMan/UserList/: UserDelegate.qml  UserDialog.qml  UserForm.qml  UserList.qml  UserListView.qml  UserPopup.qml  userlist.pri  userlist.qrc
BLEPassMan/android/: AndroidManifest.xml  android_release.keystore
BLEPassMan/images/: images.qrc
R503_Test/: R503_Test.ino
R503_Test/src/R503Lib/: R503Lib.cpp  R503Lib.h
ble_hid_device_demo/: sdkconfig  sdkconfig.old
ble_hid_device_demo/main/: ble_hidd_demo_main.c  esp_hidd_prf_api.c
ble_hid_device_ok/: sdkconfig  sdkconfig.old
ble_hid_device_ok/components/ble_device/: CMakeLists.txt  ble_device_main.c  ble_device_main.h  ble_userlist_auth.c  esp_hidd_prf_api.c  hid_dev.h  hid_device_le_prf.c  hid_device_le_prf.h  hidd_le_prf_int.h
ble_hid_device_ok/components/oled/: CMakeLists.txt  oled.c  oled.h
ble_hid_device_ok/components/r503lib/: CMakeLists.txt  r503.cpp  r503.h  r503lib.cpp  r503packet.cpp  r503packet.h
ble_hid_device_ok/components/user_list/: CMakeLists.txt  user_list.c  user_list.h
ble_hid_device_ok/main/: CMakeLists.txt  main.cpp  partitions.csv  shared_data.h
ble_hid_device_ok/scripts/: generate_key.py
ble_hid_kw111/: CMakeLists.txt  ICONS_DOCUMENTATION.md  ICON_USAGE_EXAMPLE.c  OLED_CONFIG.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  sdkconfig.old
ble_hid_kw111/components/ble_device/: CMakeLists.txt  ble_device_main.c  ble_device_main.h  ble_userlist_auth.c  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.h  hid_device_ble.c  hid_device_ble.h  hid_device_le_prf.c  hid_device_le_prf.h  hid_device_prf.c  hid_device_prf.h  hid_device_usb.c  hid_device_usb.h  hid_device_usb_stub.c  hid_keycodes.h  password_placeholders.h
ble_hid_kw111/components/buzzer/: CMakeLists.txt  buzzer.c
ble_hid_kw111/components/display_oled/: CMakeLists.txt  display_oled.c
ble_hid_kw111/components/fpm/: CMakeLists.txt  fpm.cpp  fpm.h
ble_hid_kw111/components/kw111/: CMakeLists.txt  fingerprint.cpp  fingerprint.h  kw111lib.cpp  kw111lib.h
ble_hid_kw111/components/oled/: oled.c  (+3 more)
ble_hid_kw111/main/: CMakeLists.txt  battery.cpp  buttons.cpp  config.h  fingerprint.cpp  idf_component.yml  main.cpp  partitions.csv
ble_hid_kw111/main/include/: battery.h  buttons.h  config.h  fingerprint.h
ble_hid_kw111/scripts/: generate_key.py
ble_hid_r503/: sdkconfig  sdkconfig.old
ble_hid_r503/main/: config.h  idf_component.yml  main.cpp
contactlist/: bledevicemanager.cpp  bledevicemanager.h
deploy/blepassman/: license.txt
deploy/translations/: qt_bg.qm  qt_hr.qm  qt_ko.qm  qt_nl.qm  qt_tr.qm  qt_zh_CN.qm
esp32_test/: esp32_test.ino
esp_hid_device/: sdkconfig  sdkconfig.old
esp_hid_device/main/: CMakeLists.txt  esp_hid_device_main.c  esp_hid_gap.c  esp_hid_gap.h  main.cpp  shared_data.c  shared_data.h
esp_hid_device_old/: sdkconfig
esp_hid_device_old/main/: main.cpp  shared_data.c
heartrate-game/: App.qml  CMakeLists.txt  TitleBar.qml  devicehandler.cpp  devicehandler.h
test_idf_arduino/: test_idf_arduino.ino
tusb_hid/: sdkconfig  sdkconfig.defaults  sdkconfig.old
tusb_hid/main/: CMakeLists.txt  tusb_hid_example_main.c
(+49 files in other folders)
